--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
         <meta name="csrf-token" content="{{ csrf_token() }}">
         <title>{% block title %}Webhook Manager{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
         {% block styles %}
             <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
             <link href="{{ url_for('static', filename='css/webhooks.css') }}" rel="stylesheet">
@@ -15,6 +15,7 @@
         {% endblock %}
     </head>
     <body class="bg-light">
+        {% block navbar %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">Webhook Manager</a>
@@ -65,6 +66,7 @@
                 </div>
             </div>
         </nav>
+        {% endblock %}
         {% if current_user.is_authenticated %}
         <script>
             window.APP_USER_TZ = "{{ current_user.timezone or 'UTC' }}";
